[tool.poetry]
name = "webos-shell"
version = "0.1.0"
description = "A simple LG WebOS Luna command shell"
authors = ["Kenny MacDermid <kenny.macdermid@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
webos-shell = "webos_shell.shell:run"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
